--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </h2>
 
   <form
-    action="https://formsubmit.co/zablomquist@gmail.com"
+    action="https://submit-form.com/0SF60rSUN"
     method="POST"
     target="hidden_iframe"
     onsubmit="submitted=true;"
